# MCExamples

./: CMakeLists.txt  README.md
python/: checkConvex.py  checkConvexity.py  testMesh.py
src/: main.cpp
